--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
 		"https://*/*"
 	],
 	"background" : {
-		"service_worker" : "background.js",
+		"service_worker" : "src/background.js",
 		"type": "module"
 	},
 	"content_scripts": [
@@ -21,7 +21,7 @@
 				"https://*/*"
 			],
 			"run_at":"document_start",
-			"js": ["content-script.js"]
+			"js": ["dist/content.js"]
 		}
 	]
 }
