display data on components

--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
 			"matches": [
 				"https://*/*"
 			],
-			"run_at":"document_start",
+			"run_at":"document_idle",
 			"js": ["dist/content.js"]
 		}
 	]
