--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "@babel/preset-react": "^7.17.12",
     "@babel/runtime": "^7.18.3",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   }
