--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.3",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "typescript": "^4.7.4"
   }
 }
