--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,11 @@
 			"run_at":"document_idle",
 			"js": ["dist/content.js"]
 		}
-	]
+	],
+	"icons": {
+		"16": "icon/icon16.png",
+		"48": "icon/icon48.png",
+		"128": "icon/icon128.png"
+	},
+	"author": "mnmandahalf"
 }
