--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,11 @@
 {
-	"name": "goguma-extention",
-	"version": "1.0.0",
+	"name": "goguma",
+	"version": "0.0.1",
 	"manifest_version": 3,
-	"description": "右クリックメニューから韓国語解析", 
+	"description": "右クリックメニューから韓国語解析。選択範囲の文章を品詞分解、ルビ振り、翻訳を行います。", 
 	"permissions" : [
 		"contextMenus",
-		"scripting",
 		"tabs"
-	],
-	"host_permissions" : [
-		"https://*/*"
 	],
 	"background" : {
 		"service_worker" : "src/background.js",
